Ajax Change event added.

--- a/WebAjaxApp/Views/Customer/Index.cshtml
+++ b/WebAjaxApp/Views/Customer/Index.cshtml
@@ -17,7 +17,7 @@
             @foreach (var item in Model)
             {
                 <li>
-                    <input type="radio" name="Id" id="Id" value="@item.Id" />
+                    <input class="customerRadio" type="radio" name="Id" id="Id" value="@item.Id" />
                     <label>@item.Name</label>
                 </li>
             }
